[tool.poetry]
name = "playground"
version = "0.1.0"
description = "A playground for learning the basics and new Python Features"
authors = ["Louis Agyapong <agyapong.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^7.30.1"
pydantic = "^1.8.2"
mypy = "^0.910"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
